--- a/DifferenceBetweenDates/DifferenceBetweenDates.csproj
+++ b/DifferenceBetweenDates/DifferenceBetweenDates.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\DateController.cs" />
     <Compile Include="View\DateCalculation.cs">
       <SubType>Form</SubType>
     </Compile>
